[metadata]
name = cbrf
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/cbrf.py
description = A library get currency exchange rates from CentroBank of Russian Federation
long_description = file: README.md
keywords = currency, exchange, ratio
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Business
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Text Processing
requires = beautifulsoup4, Cache, requests, lxml
[options]
zip_safe = True
py_modules = cbrf
setup_requires = setuptools_scm;
test_suite = tests.tests.Tests
dependency_links = ["git+https://github.com/KOLANICH/Cache.py.git"]

[options.extras_require]
pint integration = pint
money integration = money
